--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
   ],
   "dependencies": {
     "autoprefixer-core": "^4.0.2",
-    "csso": "^1.3.11",
     "bootstrap": "^3.3.1",
-    "font-awesome": "^4.2.0",
-    "lodash": "^2.4.1",
+    "browser-sync": "^1.8.2",
+    "csso": "^1.3.11",
     "domready": "^1.0.7",
     "fastclick": "^1.0.3",
+    "font-awesome": "^4.2.0",
     "handlebars": "^2.0.0",
     "moment": "^2.8.4",
     "smooth-scroll": "git://github.com/cferdinandi/smooth-scroll",
