--- a/resume.template
+++ b/resume.template
@@ -146,7 +146,7 @@
                     <div class="col-sm-9 detail-item-content">
                       <h4>
                         <strong>{{position}}</strong>
-                        {{#if company}}
+                        {{~#if company~}}
                           ,&nbsp;
                           {{#if website}}
                             <a href="{{website}}"  target="_blank" itemprop="url"><span itemprop="name">{{company}}</span></a>
@@ -219,7 +219,7 @@
                         {{else}}
                           <strong itemprop="name">{{organization}}</strong>
                         {{/if}}
-                        {{#if position}}
+                        {{~#if position~}}
                           ,&nbsp;<span>{{position}}</span>
                         {{/if}}
                       </h4>
@@ -282,7 +282,7 @@
                     <div class="col-sm-9 detail-item-content">
                       <h4>
                         <strong>{{area}}</strong>
-                        {{#if studyType}}
+                        {{~#if studyType~}}
                           ,&nbsp;<span>{{studyType}}</span>
                         {{/if}}
                       </h4>
@@ -304,7 +304,7 @@
                       {{#if institution}}
                         <p class="text-muted">
                           <span itemprop="name">{{institution}}</span>
-                          {{#if gpa}}
+                          {{~#if gpa~}}
                             ,&nbsp;GPA: {{gpa}}
                           {{/if}}
                         </p>
@@ -372,7 +372,7 @@
                     <div class="col-sm-9 detail-item-content">
                       <h4 itemprop="award">
                         <strong>{{title}}</strong>
-                        {{#if awarder}}
+                        {{~#if awarder~}}
                           ,&nbsp;<span>{{awarder}}</span>
                         {{/if}}
                       </h4>
@@ -419,7 +419,7 @@
                             <span itemprop="name">{{name}}</span>
                           {{/if}}
                         </strong>
-                        {{#if publisher}}
+                        {{~#if publisher~}}
                           ,&nbsp;<span itemprop="publisher" itemscope itemtype="http://schema.org/Organization"><span itemprop="name">{{publisher}}</span></span>
                         {{/if}}
                       </h4>
