--- a/resume.template
+++ b/resume.template
@@ -7,7 +7,7 @@
 
   <style>
     {{> webfonts}}
-    {{> fontAwesome}}
+    {{> icomoon}}
     {{> bootstrap}}
     {{> global}}
     {{> card}}
@@ -60,7 +60,7 @@
               {{#if phone}}
                 <li class="basics-item">
                   <a href="tel:{{sanitizePhone phone}}">
-                    <span class="icon text-muted"><i class="fa fa-lg fa-phone"></i></span>
+                    <span class="icon text-muted"><i class="icon-lg icon-phone"></i></span>
                     <span class="info" itemprop="telephone">{{phone}}</span>
                   </a>
                 </li>
@@ -69,7 +69,7 @@
                 <li class="basics-item">
                   {{#location}}
                     <a href="{{mapURL this}}" target="_blank" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                      <span class="icon text-muted"><i class="fa fa-lg fa-location-arrow"></i></span>
+                      <span class="icon text-muted"><i class="icon-lg icon-location-arrow"></i></span>
                       <span class="info">
                         <span itemprop="streetAddress">{{#if address}}{{address}},{{/if}}</span>
                         <span itemprop="addressLocality">{{#if city}}{{city}},{{/if}}</span>
@@ -84,7 +84,7 @@
               {{#if email}}
                 <li class="basics-item">
                   <a href="mailto:{{email}}">
-                    <span class="icon text-muted"><i class="fa fa-lg fa-envelope"></i></span>
+                    <span class="icon text-muted"><i class="icon-lg icon-envelope"></i></span>
                     <span class="info" itemprop="email">{{email}}</span>
                   </a>
                 </li>
@@ -92,7 +92,7 @@
               {{#if website}}
                 <li class="basics-item">
                   <a href="{{website}}" rel="author" target="_blank" itemprop="url">
-                    <span class="icon text-muted"><i class="fa fa-lg fa-link"></i></span>
+                    <span class="icon text-muted"><i class="icon-lg icon-chain"></i></span>
                     <span class="info">{{sanitizeURL website}}</span>
                   </a>
                 </li>
@@ -104,14 +104,14 @@
             {{#if profiles}}
               <ul class="social-profiles nav nav-justified">
                 {{#each profiles}}
-                  <li class="profile-item"><a href="{{url}}" target="_blank"><i class="fa fa-2x fa-{{normalizeNetwork network}} network-{{normalizeNetwork network}}"></i></a></li>
+                  <li class="profile-item"><a href="{{url}}" target="_blank"><i class="icon-2x icon-{{normalizeNetwork network}} network-{{normalizeNetwork network}}"></i></a></li>
                 {{/each}}
               </ul>
             {{/if}}
           {{/resume.basics}}
 
           <ul class="nav nav-justified hidden-xs hidden-sm">
-            <li><a href="#" class="text-muted" data-scroll><i class="fa fa-chevron-up"></i></a></li>
+            <li><a href="#" class="text-muted" data-scroll><i class="icon-chevron-up"></i></a></li>
           </ul>
         </div>
       </section>
@@ -121,7 +121,7 @@
 
           {{#if resume.basics.summary}}
             <div class="detail" id="about">
-              <h3 class="text-uppercase text-muted"><i class="fa fa-lg fa-user"></i> About</h3>
+              <h3 class="text-uppercase text-muted"><i class="icon-lg icon-user"></i> About</h3>
 
               <div class="row">
                 <div class="col-xs-12">
@@ -138,7 +138,7 @@
 
           {{#if resume.work}}
             <div class="detail" id="work-experience">
-              <h3 class="text-uppercase text-muted"><i class="fa fa-lg fa-building"></i> Experience</h3>
+              <h3 class="text-uppercase text-muted"><i class="icon-lg icon-building"></i> Experience</h3>
 
               <ul class="list-unstyled">
                 {{#each resume.work}}
@@ -165,7 +165,7 @@
                             {{else}}
                               <time>Present</time>
                             {{/if}}
-                            &nbsp;<span><i class="fa fa-clock-o"></i>&nbsp;{{humaneDuration startDate endDate}}</span>
+                            &nbsp;<span><i class="icon-clock-o"></i>&nbsp;{{humaneDuration startDate endDate}}</span>
                           </small>
                         </p>
                       {{/if}}
@@ -195,7 +195,7 @@
                           {{/if}}
                         </p>
                         <p>
-                          <i class="fa fa-clock-o icon-left"></i>&nbsp;{{humaneDuration startDate endDate}}
+                          <i class="icon-clock-o icon-left"></i>&nbsp;{{humaneDuration startDate endDate}}
                         </p>
                       </div>
                     {{/if}}
@@ -207,7 +207,7 @@
 
           {{#if resume.volunteer}}
             <div class="detail" id="volunteer-work">
-              <h3 class="text-uppercase text-muted"><i class="fa fa-lg fa-bookmark"></i> Projects</h3>
+              <h3 class="text-uppercase text-muted"><i class="icon-lg icon-bookmark"></i> Projects</h3>
 
               <ul class="list-unstyled">
                 {{#each resume.volunteer}}
@@ -262,7 +262,7 @@
                           {{/if}}
                         </p>
                         <p>
-                          <i class="fa fa-clock-o icon-left"></i>&nbsp;{{humaneDuration startDate endDate}}
+                          <i class="icon-clock-o icon-left"></i>&nbsp;{{humaneDuration startDate endDate}}
                         </p>
                       </div>
                     {{/if}}
@@ -274,7 +274,7 @@
 
           {{#if resume.education}}
             <div class="detail" id="education">
-              <h3 class="text-uppercase text-muted"><i class="fa fa-lg fa-mortar-board"></i> Education</h3>
+              <h3 class="text-uppercase text-muted"><i class="icon-lg icon-graduation-cap"></i> Education</h3>
 
               <ul class="list-unstyled">
                 {{#each resume.education}}
@@ -340,7 +340,7 @@
 
           {{#if resume.skills}}
             <div class="detail" id="skills">
-              <h3 class="text-uppercase text-muted"><i class="fa fa-lg fa-code"></i> Skills</h3>
+              <h3 class="text-uppercase text-muted"><i class="icon-lg icon-code"></i> Skills</h3>
 
               <ul class="list-unstyled">
                 {{#each resume.skills}}
@@ -364,7 +364,7 @@
 
           {{#if resume.awards}}
             <div class="detail" id="awards">
-              <h3 class="text-uppercase text-muted"><i class="fa fa-lg fa-trophy"></i> Awards</h3>
+              <h3 class="text-uppercase text-muted"><i class="icon-lg icon-trophy"></i> Awards</h3>
 
               <ul class="list-unstyled">
                 {{#each resume.awards}}
@@ -405,7 +405,7 @@
 
           {{#if resume.publications}}
             <div class="detail" id="publications">
-              <h3 class="text-uppercase text-muted"><i class="fa fa-lg fa-book"></i> Publications</h3>
+              <h3 class="text-uppercase text-muted"><i class="icon-lg icon-book"></i> Publications</h3>
 
               <ul class="list-unstyled">
                 {{#each resume.publications}}
@@ -450,7 +450,7 @@
 
           {{#if resume.interests}}
             <div class="detail" id="interests">
-              <h3 class="text-uppercase text-muted"><i class="fa fa-lg fa-heart"></i> Interests</h3>
+              <h3 class="text-uppercase text-muted"><i class="icon-lg icon-heart"></i> Interests</h3>
 
               <ul class="list-unstyled">
                 {{#each resume.interests}}
@@ -474,7 +474,7 @@
 
           {{#if resume.references}}
             <div class="detail" id="references">
-              <h3 class="text-uppercase text-muted"><i class="fa fa-lg fa-thumbs-up"></i> References</h3>
+              <h3 class="text-uppercase text-muted"><i class="icon-lg icon-thumbs-up"></i> References</h3>
 
               <ul class="list-unstyled">
                 {{#each resume.references}}
@@ -492,7 +492,7 @@
           {{/if}}
 
           <ul class="nav nav-justified visible-xs visible-sm">
-            <li><a href="#" class="text-muted" data-scroll><i class="fa fa-chevron-up"></i></a></li>
+            <li><a href="#" class="text-muted" data-scroll><i class="icon-chevron-up"></i></a></li>
           </ul>
         </div>
       </section>
