Remove FastClick (probably overkill for a resume)

--- a/resume.template
+++ b/resume.template
@@ -499,9 +499,8 @@
     </div>
   </div>
 
-  <script>
+  <script async defer>
     {{> domReady}}
-    {{> FastClick}}
     {{> smoothScroll}}
     {{> script}}
   </script>
