--- a/resume.template
+++ b/resume.template
@@ -6,7 +6,7 @@
   <title>{{resume.basics.name}}{{#if resume.basics.label}} — {{resume.basics.label}}{{/if}}</title>
 
   <style>
-    {{> webfonts}}
+    {{> opensans}}
     {{> icomoon}}
     {{> bootstrap}}
     {{> global}}
