--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   ],
   "dependencies": {
     "autoprefixer-core": "^4.0.2",
+    "browser-saveas": "^1.0.0",
     "browser-sync": "^1.8.2",
     "csso": "^1.3.11",
     "domready": "^1.0.7",
